Compilador/parser/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> PROGRAM LBRACE declarations statements RBRACE
Rule 2     declarations -> declarations declaration
Rule 3     declarations -> declaration
Rule 4     declarations -> empty
Rule 5     declaration -> type var_list SEMICOLON
Rule 6     var_list -> var_list COMMA IDENTIFIER
Rule 7     var_list -> var_list COMMA IDENTIFIER ASSIGN expression
Rule 8     var_list -> IDENTIFIER
Rule 9     var_list -> IDENTIFIER ASSIGN expression
Rule 10    type -> INT
Rule 11    type -> FLOAT
Rule 12    type -> BOOL
Rule 13    statements -> statements statement
Rule 14    statements -> statement
Rule 15    statements -> empty
Rule 16    statement -> assignment
Rule 17    statement -> if_statement
Rule 18    statement -> while_statement
Rule 19    statement -> do_until_statement
Rule 20    statement -> write_statement
Rule 21    statement -> read_statement
Rule 22    statement -> block
Rule 23    assignment -> IDENTIFIER ASSIGN expression SEMICOLON
Rule 24    if_statement -> IF expression THEN statements else_part FI
Rule 25    else_part -> ELSE statements
Rule 26    else_part -> empty
Rule 27    while_statement -> WHILE expression LBRACE statements RBRACE
Rule 28    do_until_statement -> DO LBRACE statements RBRACE UNTIL expression SEMICOLON
Rule 29    write_statement -> WRITE expression SEMICOLON
Rule 30    read_statement -> READ IDENTIFIER SEMICOLON
Rule 31    block -> LBRACE statements RBRACE
Rule 32    expression -> expression PLUS expression
Rule 33    expression -> expression MINUS expression
Rule 34    expression -> expression TIMES expression
Rule 35    expression -> expression DIVIDE expression
Rule 36    expression -> expression POWER expression
Rule 37    expression -> expression EQ expression
Rule 38    expression -> expression LT expression
Rule 39    expression -> expression GT expression
Rule 40    expression -> expression LE expression
Rule 41    expression -> expression GE expression
Rule 42    expression -> expression NE expression
Rule 43    expression -> expression AND expression
Rule 44    expression -> expression OR expression
Rule 45    expression -> MINUS expression
Rule 46    expression -> NOT expression
Rule 47    expression -> LPAREN expression RPAREN
Rule 48    expression -> NUMBER
Rule 49    expression -> IDENTIFIER
Rule 50    expression -> TRUE
Rule 51    expression -> FALSE
Rule 52    empty -> <empty>

Terminals, with rules where they appear

AND                  : 43
ASSIGN               : 7 9 23
BOOL                 : 12
COMMA                : 6 7
DIVIDE               : 35
DO                   : 28
ELSE                 : 25
EQ                   : 37
FALSE                : 51
FI                   : 24
FLOAT                : 11
GE                   : 41
GT                   : 39
IDENTIFIER           : 6 7 8 9 23 30 49
IF                   : 24
INT                  : 10
LBRACE               : 1 27 28 31
LE                   : 40
LPAREN               : 47
LT                   : 38
MINUS                : 33 45
NE                   : 42
NOT                  : 46
NUMBER               : 48
OR                   : 44
PLUS                 : 32
POWER                : 36
PROGRAM              : 1
RBRACE               : 1 27 28 31
READ                 : 30
RPAREN               : 47
SEMICOLON            : 5 23 28 29 30
THEN                 : 24
TIMES                : 34
TRUE                 : 50
UNTIL                : 28
WHILE                : 27
WRITE                : 29
error                : 

Nonterminals, with rules where they appear

assignment           : 16
block                : 22
declaration          : 2 3
declarations         : 1 2
do_until_statement   : 19
else_part            : 24
empty                : 4 15 26
expression           : 7 9 23 24 27 28 29 32 32 33 33 34 34 35 35 36 36 37 37 38 38 39 39 40 40 41 41 42 42 43 43 44 44 45 46 47
if_statement         : 17
program              : 0
read_statement       : 21
statement            : 13 14
statements           : 1 13 24 25 27 28 31
type                 : 5
var_list             : 5 6 7
while_statement      : 18
write_statement      : 20

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . PROGRAM LBRACE declarations statements RBRACE

    PROGRAM         shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> PROGRAM . LBRACE declarations statements RBRACE

    LBRACE          shift and go to state 3


state 3

    (1) program -> PROGRAM LBRACE . declarations statements RBRACE
    (2) declarations -> . declarations declaration
    (3) declarations -> . declaration
    (4) declarations -> . empty
    (5) declaration -> . type var_list SEMICOLON
    (52) empty -> .
    (10) type -> . INT
    (11) type -> . FLOAT
    (12) type -> . BOOL

  ! shift/reduce conflict for INT resolved as shift
  ! shift/reduce conflict for FLOAT resolved as shift
  ! shift/reduce conflict for BOOL resolved as shift
    IDENTIFIER      reduce using rule 52 (empty -> .)
    IF              reduce using rule 52 (empty -> .)
    WHILE           reduce using rule 52 (empty -> .)
    DO              reduce using rule 52 (empty -> .)
    WRITE           reduce using rule 52 (empty -> .)
    READ            reduce using rule 52 (empty -> .)
    LBRACE          reduce using rule 52 (empty -> .)
    RBRACE          reduce using rule 52 (empty -> .)
    INT             shift and go to state 8
    FLOAT           shift and go to state 9
    BOOL            shift and go to state 10

  ! INT             [ reduce using rule 52 (empty -> .) ]
  ! FLOAT           [ reduce using rule 52 (empty -> .) ]
  ! BOOL            [ reduce using rule 52 (empty -> .) ]

    declarations                   shift and go to state 4
    declaration                    shift and go to state 5
    empty                          shift and go to state 6
    type                           shift and go to state 7

state 4

    (1) program -> PROGRAM LBRACE declarations . statements RBRACE
    (2) declarations -> declarations . declaration
    (13) statements -> . statements statement
    (14) statements -> . statement
    (15) statements -> . empty
    (5) declaration -> . type var_list SEMICOLON
    (16) statement -> . assignment
    (17) statement -> . if_statement
    (18) statement -> . while_statement
    (19) statement -> . do_until_statement
    (20) statement -> . write_statement
    (21) statement -> . read_statement
    (22) statement -> . block
    (52) empty -> .
    (10) type -> . INT
    (11) type -> . FLOAT
    (12) type -> . BOOL
    (23) assignment -> . IDENTIFIER ASSIGN expression SEMICOLON
    (24) if_statement -> . IF expression THEN statements else_part FI
    (27) while_statement -> . WHILE expression LBRACE statements RBRACE
    (28) do_until_statement -> . DO LBRACE statements RBRACE UNTIL expression SEMICOLON
    (29) write_statement -> . WRITE expression SEMICOLON
    (30) read_statement -> . READ IDENTIFIER SEMICOLON
    (31) block -> . LBRACE statements RBRACE

  ! shift/reduce conflict for IDENTIFIER resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for DO resolved as shift
  ! shift/reduce conflict for WRITE resolved as shift
  ! shift/reduce conflict for READ resolved as shift
  ! shift/reduce conflict for LBRACE resolved as shift
    RBRACE          reduce using rule 52 (empty -> .)
    INT             shift and go to state 8
    FLOAT           shift and go to state 9
    BOOL            shift and go to state 10
    IDENTIFIER      shift and go to state 23
    IF              shift and go to state 24
    WHILE           shift and go to state 25
    DO              shift and go to state 26
    WRITE           shift and go to state 27
    READ            shift and go to state 28
    LBRACE          shift and go to state 11

  ! IDENTIFIER      [ reduce using rule 52 (empty -> .) ]
  ! IF              [ reduce using rule 52 (empty -> .) ]
  ! WHILE           [ reduce using rule 52 (empty -> .) ]
  ! DO              [ reduce using rule 52 (empty -> .) ]
  ! WRITE           [ reduce using rule 52 (empty -> .) ]
  ! READ            [ reduce using rule 52 (empty -> .) ]
  ! LBRACE          [ reduce using rule 52 (empty -> .) ]

    statements                     shift and go to state 12
    declaration                    shift and go to state 13
    statement                      shift and go to state 14
    empty                          shift and go to state 15
    type                           shift and go to state 7
    assignment                     shift and go to state 16
    if_statement                   shift and go to state 17
    while_statement                shift and go to state 18
    do_until_statement             shift and go to state 19
    write_statement                shift and go to state 20
    read_statement                 shift and go to state 21
    block                          shift and go to state 22

state 5

    (3) declarations -> declaration .

    INT             reduce using rule 3 (declarations -> declaration .)
    FLOAT           reduce using rule 3 (declarations -> declaration .)
    BOOL            reduce using rule 3 (declarations -> declaration .)
    IDENTIFIER      reduce using rule 3 (declarations -> declaration .)
    IF              reduce using rule 3 (declarations -> declaration .)
    WHILE           reduce using rule 3 (declarations -> declaration .)
    DO              reduce using rule 3 (declarations -> declaration .)
    WRITE           reduce using rule 3 (declarations -> declaration .)
    READ            reduce using rule 3 (declarations -> declaration .)
    LBRACE          reduce using rule 3 (declarations -> declaration .)
    RBRACE          reduce using rule 3 (declarations -> declaration .)


state 6

    (4) declarations -> empty .

    INT             reduce using rule 4 (declarations -> empty .)
    FLOAT           reduce using rule 4 (declarations -> empty .)
    BOOL            reduce using rule 4 (declarations -> empty .)
    IDENTIFIER      reduce using rule 4 (declarations -> empty .)
    IF              reduce using rule 4 (declarations -> empty .)
    WHILE           reduce using rule 4 (declarations -> empty .)
    DO              reduce using rule 4 (declarations -> empty .)
    WRITE           reduce using rule 4 (declarations -> empty .)
    READ            reduce using rule 4 (declarations -> empty .)
    LBRACE          reduce using rule 4 (declarations -> empty .)
    RBRACE          reduce using rule 4 (declarations -> empty .)


state 7

    (5) declaration -> type . var_list SEMICOLON
    (6) var_list -> . var_list COMMA IDENTIFIER
    (7) var_list -> . var_list COMMA IDENTIFIER ASSIGN expression
    (8) var_list -> . IDENTIFIER
    (9) var_list -> . IDENTIFIER ASSIGN expression

    IDENTIFIER      shift and go to state 30

    var_list                       shift and go to state 29

state 8

    (10) type -> INT .

    IDENTIFIER      reduce using rule 10 (type -> INT .)


state 9

    (11) type -> FLOAT .

    IDENTIFIER      reduce using rule 11 (type -> FLOAT .)


state 10

    (12) type -> BOOL .

    IDENTIFIER      reduce using rule 12 (type -> BOOL .)


state 11

    (31) block -> LBRACE . statements RBRACE
    (13) statements -> . statements statement
    (14) statements -> . statement
    (15) statements -> . empty
    (16) statement -> . assignment
    (17) statement -> . if_statement
    (18) statement -> . while_statement
    (19) statement -> . do_until_statement
    (20) statement -> . write_statement
    (21) statement -> . read_statement
    (22) statement -> . block
    (52) empty -> .
    (23) assignment -> . IDENTIFIER ASSIGN expression SEMICOLON
    (24) if_statement -> . IF expression THEN statements else_part FI
    (27) while_statement -> . WHILE expression LBRACE statements RBRACE
    (28) do_until_statement -> . DO LBRACE statements RBRACE UNTIL expression SEMICOLON
    (29) write_statement -> . WRITE expression SEMICOLON
    (30) read_statement -> . READ IDENTIFIER SEMICOLON
    (31) block -> . LBRACE statements RBRACE

  ! shift/reduce conflict for IDENTIFIER resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for DO resolved as shift
  ! shift/reduce conflict for WRITE resolved as shift
  ! shift/reduce conflict for READ resolved as shift
  ! shift/reduce conflict for LBRACE resolved as shift
    RBRACE          reduce using rule 52 (empty -> .)
    IDENTIFIER      shift and go to state 23
    IF              shift and go to state 24
    WHILE           shift and go to state 25
    DO              shift and go to state 26
    WRITE           shift and go to state 27
    READ            shift and go to state 28
    LBRACE          shift and go to state 11

  ! IDENTIFIER      [ reduce using rule 52 (empty -> .) ]
  ! IF              [ reduce using rule 52 (empty -> .) ]
  ! WHILE           [ reduce using rule 52 (empty -> .) ]
  ! DO              [ reduce using rule 52 (empty -> .) ]
  ! WRITE           [ reduce using rule 52 (empty -> .) ]
  ! READ            [ reduce using rule 52 (empty -> .) ]
  ! LBRACE          [ reduce using rule 52 (empty -> .) ]

    statements                     shift and go to state 31
    statement                      shift and go to state 14
    empty                          shift and go to state 15
    assignment                     shift and go to state 16
    if_statement                   shift and go to state 17
    while_statement                shift and go to state 18
    do_until_statement             shift and go to state 19
    write_statement                shift and go to state 20
    read_statement                 shift and go to state 21
    block                          shift and go to state 22

state 12

    (1) program -> PROGRAM LBRACE declarations statements . RBRACE
    (13) statements -> statements . statement
    (16) statement -> . assignment
    (17) statement -> . if_statement
    (18) statement -> . while_statement
    (19) statement -> . do_until_statement
    (20) statement -> . write_statement
    (21) statement -> . read_statement
    (22) statement -> . block
    (23) assignment -> . IDENTIFIER ASSIGN expression SEMICOLON
    (24) if_statement -> . IF expression THEN statements else_part FI
    (27) while_statement -> . WHILE expression LBRACE statements RBRACE
    (28) do_until_statement -> . DO LBRACE statements RBRACE UNTIL expression SEMICOLON
    (29) write_statement -> . WRITE expression SEMICOLON
    (30) read_statement -> . READ IDENTIFIER SEMICOLON
    (31) block -> . LBRACE statements RBRACE

    RBRACE          shift and go to state 32
    IDENTIFIER      shift and go to state 23
    IF              shift and go to state 24
    WHILE           shift and go to state 25
    DO              shift and go to state 26
    WRITE           shift and go to state 27
    READ            shift and go to state 28
    LBRACE          shift and go to state 11

    statement                      shift and go to state 33
    assignment                     shift and go to state 16
    if_statement                   shift and go to state 17
    while_statement                shift and go to state 18
    do_until_statement             shift and go to state 19
    write_statement                shift and go to state 20
    read_statement                 shift and go to state 21
    block                          shift and go to state 22

state 13

    (2) declarations -> declarations declaration .

    INT             reduce using rule 2 (declarations -> declarations declaration .)
    FLOAT           reduce using rule 2 (declarations -> declarations declaration .)
    BOOL            reduce using rule 2 (declarations -> declarations declaration .)
    IDENTIFIER      reduce using rule 2 (declarations -> declarations declaration .)
    IF              reduce using rule 2 (declarations -> declarations declaration .)
    WHILE           reduce using rule 2 (declarations -> declarations declaration .)
    DO              reduce using rule 2 (declarations -> declarations declaration .)
    WRITE           reduce using rule 2 (declarations -> declarations declaration .)
    READ            reduce using rule 2 (declarations -> declarations declaration .)
    LBRACE          reduce using rule 2 (declarations -> declarations declaration .)
    RBRACE          reduce using rule 2 (declarations -> declarations declaration .)


state 14

    (14) statements -> statement .

    RBRACE          reduce using rule 14 (statements -> statement .)
    IDENTIFIER      reduce using rule 14 (statements -> statement .)
    IF              reduce using rule 14 (statements -> statement .)
    WHILE           reduce using rule 14 (statements -> statement .)
    DO              reduce using rule 14 (statements -> statement .)
    WRITE           reduce using rule 14 (statements -> statement .)
    READ            reduce using rule 14 (statements -> statement .)
    LBRACE          reduce using rule 14 (statements -> statement .)
    ELSE            reduce using rule 14 (statements -> statement .)
    FI              reduce using rule 14 (statements -> statement .)


state 15

    (15) statements -> empty .

    RBRACE          reduce using rule 15 (statements -> empty .)
    IDENTIFIER      reduce using rule 15 (statements -> empty .)
    IF              reduce using rule 15 (statements -> empty .)
    WHILE           reduce using rule 15 (statements -> empty .)
    DO              reduce using rule 15 (statements -> empty .)
    WRITE           reduce using rule 15 (statements -> empty .)
    READ            reduce using rule 15 (statements -> empty .)
    LBRACE          reduce using rule 15 (statements -> empty .)
    ELSE            reduce using rule 15 (statements -> empty .)
    FI              reduce using rule 15 (statements -> empty .)


state 16

    (16) statement -> assignment .

    RBRACE          reduce using rule 16 (statement -> assignment .)
    IDENTIFIER      reduce using rule 16 (statement -> assignment .)
    IF              reduce using rule 16 (statement -> assignment .)
    WHILE           reduce using rule 16 (statement -> assignment .)
    DO              reduce using rule 16 (statement -> assignment .)
    WRITE           reduce using rule 16 (statement -> assignment .)
    READ            reduce using rule 16 (statement -> assignment .)
    LBRACE          reduce using rule 16 (statement -> assignment .)
    ELSE            reduce using rule 16 (statement -> assignment .)
    FI              reduce using rule 16 (statement -> assignment .)


state 17

    (17) statement -> if_statement .

    RBRACE          reduce using rule 17 (statement -> if_statement .)
    IDENTIFIER      reduce using rule 17 (statement -> if_statement .)
    IF              reduce using rule 17 (statement -> if_statement .)
    WHILE           reduce using rule 17 (statement -> if_statement .)
    DO              reduce using rule 17 (statement -> if_statement .)
    WRITE           reduce using rule 17 (statement -> if_statement .)
    READ            reduce using rule 17 (statement -> if_statement .)
    LBRACE          reduce using rule 17 (statement -> if_statement .)
    ELSE            reduce using rule 17 (statement -> if_statement .)
    FI              reduce using rule 17 (statement -> if_statement .)


state 18

    (18) statement -> while_statement .

    RBRACE          reduce using rule 18 (statement -> while_statement .)
    IDENTIFIER      reduce using rule 18 (statement -> while_statement .)
    IF              reduce using rule 18 (statement -> while_statement .)
    WHILE           reduce using rule 18 (statement -> while_statement .)
    DO              reduce using rule 18 (statement -> while_statement .)
    WRITE           reduce using rule 18 (statement -> while_statement .)
    READ            reduce using rule 18 (statement -> while_statement .)
    LBRACE          reduce using rule 18 (statement -> while_statement .)
    ELSE            reduce using rule 18 (statement -> while_statement .)
    FI              reduce using rule 18 (statement -> while_statement .)


state 19

    (19) statement -> do_until_statement .

    RBRACE          reduce using rule 19 (statement -> do_until_statement .)
    IDENTIFIER      reduce using rule 19 (statement -> do_until_statement .)
    IF              reduce using rule 19 (statement -> do_until_statement .)
    WHILE           reduce using rule 19 (statement -> do_until_statement .)
    DO              reduce using rule 19 (statement -> do_until_statement .)
    WRITE           reduce using rule 19 (statement -> do_until_statement .)
    READ            reduce using rule 19 (statement -> do_until_statement .)
    LBRACE          reduce using rule 19 (statement -> do_until_statement .)
    ELSE            reduce using rule 19 (statement -> do_until_statement .)
    FI              reduce using rule 19 (statement -> do_until_statement .)


state 20

    (20) statement -> write_statement .

    RBRACE          reduce using rule 20 (statement -> write_statement .)
    IDENTIFIER      reduce using rule 20 (statement -> write_statement .)
    IF              reduce using rule 20 (statement -> write_statement .)
    WHILE           reduce using rule 20 (statement -> write_statement .)
    DO              reduce using rule 20 (statement -> write_statement .)
    WRITE           reduce using rule 20 (statement -> write_statement .)
    READ            reduce using rule 20 (statement -> write_statement .)
    LBRACE          reduce using rule 20 (statement -> write_statement .)
    ELSE            reduce using rule 20 (statement -> write_statement .)
    FI              reduce using rule 20 (statement -> write_statement .)


state 21

    (21) statement -> read_statement .

    RBRACE          reduce using rule 21 (statement -> read_statement .)
    IDENTIFIER      reduce using rule 21 (statement -> read_statement .)
    IF              reduce using rule 21 (statement -> read_statement .)
    WHILE           reduce using rule 21 (statement -> read_statement .)
    DO              reduce using rule 21 (statement -> read_statement .)
    WRITE           reduce using rule 21 (statement -> read_statement .)
    READ            reduce using rule 21 (statement -> read_statement .)
    LBRACE          reduce using rule 21 (statement -> read_statement .)
    ELSE            reduce using rule 21 (statement -> read_statement .)
    FI              reduce using rule 21 (statement -> read_statement .)


state 22

    (22) statement -> block .

    RBRACE          reduce using rule 22 (statement -> block .)
    IDENTIFIER      reduce using rule 22 (statement -> block .)
    IF              reduce using rule 22 (statement -> block .)
    WHILE           reduce using rule 22 (statement -> block .)
    DO              reduce using rule 22 (statement -> block .)
    WRITE           reduce using rule 22 (statement -> block .)
    READ            reduce using rule 22 (statement -> block .)
    LBRACE          reduce using rule 22 (statement -> block .)
    ELSE            reduce using rule 22 (statement -> block .)
    FI              reduce using rule 22 (statement -> block .)


state 23

    (23) assignment -> IDENTIFIER . ASSIGN expression SEMICOLON

    ASSIGN          shift and go to state 34


state 24

    (24) if_statement -> IF . expression THEN statements else_part FI
    (32) expression -> . expression PLUS expression
    (33) expression -> . expression MINUS expression
    (34) expression -> . expression TIMES expression
    (35) expression -> . expression DIVIDE expression
    (36) expression -> . expression POWER expression
    (37) expression -> . expression EQ expression
    (38) expression -> . expression LT expression
    (39) expression -> . expression GT expression
    (40) expression -> . expression LE expression
    (41) expression -> . expression GE expression
    (42) expression -> . expression NE expression
    (43) expression -> . expression AND expression
    (44) expression -> . expression OR expression
    (45) expression -> . MINUS expression
    (46) expression -> . NOT expression
    (47) expression -> . LPAREN expression RPAREN
    (48) expression -> . NUMBER
    (49) expression -> . IDENTIFIER
    (50) expression -> . TRUE
    (51) expression -> . FALSE

    MINUS           shift and go to state 36
    NOT             shift and go to state 37
    LPAREN          shift and go to state 38
    NUMBER          shift and go to state 39
    IDENTIFIER      shift and go to state 40
    TRUE            shift and go to state 41
    FALSE           shift and go to state 42

    expression                     shift and go to state 35

state 25

    (27) while_statement -> WHILE . expression LBRACE statements RBRACE
    (32) expression -> . expression PLUS expression
    (33) expression -> . expression MINUS expression
    (34) expression -> . expression TIMES expression
    (35) expression -> . expression DIVIDE expression
    (36) expression -> . expression POWER expression
    (37) expression -> . expression EQ expression
    (38) expression -> . expression LT expression
    (39) expression -> . expression GT expression
    (40) expression -> . expression LE expression
    (41) expression -> . expression GE expression
    (42) expression -> . expression NE expression
    (43) expression -> . expression AND expression
    (44) expression -> . expression OR expression
    (45) expression -> . MINUS expression
    (46) expression -> . NOT expression
    (47) expression -> . LPAREN expression RPAREN
    (48) expression -> . NUMBER
    (49) expression -> . IDENTIFIER
    (50) expression -> . TRUE
    (51) expression -> . FALSE

    MINUS           shift and go to state 36
    NOT             shift and go to state 37
    LPAREN          shift and go to state 38
    NUMBER          shift and go to state 39
    IDENTIFIER      shift and go to state 40
    TRUE            shift and go to state 41
    FALSE           shift and go to state 42

    expression                     shift and go to state 43

state 26

    (28) do_until_statement -> DO . LBRACE statements RBRACE UNTIL expression SEMICOLON

    LBRACE          shift and go to state 44


state 27

    (29) write_statement -> WRITE . expression SEMICOLON
    (32) expression -> . expression PLUS expression
    (33) expression -> . expression MINUS expression
    (34) expression -> . expression TIMES expression
    (35) expression -> . expression DIVIDE expression
    (36) expression -> . expression POWER expression
    (37) expression -> . expression EQ expression
    (38) expression -> . expression LT expression
    (39) expression -> . expression GT expression
    (40) expression -> . expression LE expression
    (41) expression -> . expression GE expression
    (42) expression -> . expression NE expression
    (43) expression -> . expression AND expression
    (44) expression -> . expression OR expression
    (45) expression -> . MINUS expression
    (46) expression -> . NOT expression
    (47) expression -> . LPAREN expression RPAREN
    (48) expression -> . NUMBER
    (49) expression -> . IDENTIFIER
    (50) expression -> . TRUE
    (51) expression -> . FALSE

    MINUS           shift and go to state 36
    NOT             shift and go to state 37
    LPAREN          shift and go to state 38
    NUMBER          shift and go to state 39
    IDENTIFIER      shift and go to state 40
    TRUE            shift and go to state 41
    FALSE           shift and go to state 42

    expression                     shift and go to state 45

state 28

    (30) read_statement -> READ . IDENTIFIER SEMICOLON

    IDENTIFIER      shift and go to state 46


state 29

    (5) declaration -> type var_list . SEMICOLON
    (6) var_list -> var_list . COMMA IDENTIFIER
    (7) var_list -> var_list . COMMA IDENTIFIER ASSIGN expression

    SEMICOLON       shift and go to state 47
    COMMA           shift and go to state 48


state 30

    (8) var_list -> IDENTIFIER .
    (9) var_list -> IDENTIFIER . ASSIGN expression

    SEMICOLON       reduce using rule 8 (var_list -> IDENTIFIER .)
    COMMA           reduce using rule 8 (var_list -> IDENTIFIER .)
    ASSIGN          shift and go to state 49


state 31

    (31) block -> LBRACE statements . RBRACE
    (13) statements -> statements . statement
    (16) statement -> . assignment
    (17) statement -> . if_statement
    (18) statement -> . while_statement
    (19) statement -> . do_until_statement
    (20) statement -> . write_statement
    (21) statement -> . read_statement
    (22) statement -> . block
    (23) assignment -> . IDENTIFIER ASSIGN expression SEMICOLON
    (24) if_statement -> . IF expression THEN statements else_part FI
    (27) while_statement -> . WHILE expression LBRACE statements RBRACE
    (28) do_until_statement -> . DO LBRACE statements RBRACE UNTIL expression SEMICOLON
    (29) write_statement -> . WRITE expression SEMICOLON
    (30) read_statement -> . READ IDENTIFIER SEMICOLON
    (31) block -> . LBRACE statements RBRACE

    RBRACE          shift and go to state 50
    IDENTIFIER      shift and go to state 23
    IF              shift and go to state 24
    WHILE           shift and go to state 25
    DO              shift and go to state 26
    WRITE           shift and go to state 27
    READ            shift and go to state 28
    LBRACE          shift and go to state 11

    statement                      shift and go to state 33
    assignment                     shift and go to state 16
    if_statement                   shift and go to state 17
    while_statement                shift and go to state 18
    do_until_statement             shift and go to state 19
    write_statement                shift and go to state 20
    read_statement                 shift and go to state 21
    block                          shift and go to state 22

state 32

    (1) program -> PROGRAM LBRACE declarations statements RBRACE .

    $end            reduce using rule 1 (program -> PROGRAM LBRACE declarations statements RBRACE .)


state 33

    (13) statements -> statements statement .

    RBRACE          reduce using rule 13 (statements -> statements statement .)
    IDENTIFIER      reduce using rule 13 (statements -> statements statement .)
    IF              reduce using rule 13 (statements -> statements statement .)
    WHILE           reduce using rule 13 (statements -> statements statement .)
    DO              reduce using rule 13 (statements -> statements statement .)
    WRITE           reduce using rule 13 (statements -> statements statement .)
    READ            reduce using rule 13 (statements -> statements statement .)
    LBRACE          reduce using rule 13 (statements -> statements statement .)
    ELSE            reduce using rule 13 (statements -> statements statement .)
    FI              reduce using rule 13 (statements -> statements statement .)


state 34

    (23) assignment -> IDENTIFIER ASSIGN . expression SEMICOLON
    (32) expression -> . expression PLUS expression
    (33) expression -> . expression MINUS expression
    (34) expression -> . expression TIMES expression
    (35) expression -> . expression DIVIDE expression
    (36) expression -> . expression POWER expression
    (37) expression -> . expression EQ expression
    (38) expression -> . expression LT expression
    (39) expression -> . expression GT expression
    (40) expression -> . expression LE expression
    (41) expression -> . expression GE expression
    (42) expression -> . expression NE expression
    (43) expression -> . expression AND expression
    (44) expression -> . expression OR expression
    (45) expression -> . MINUS expression
    (46) expression -> . NOT expression
    (47) expression -> . LPAREN expression RPAREN
    (48) expression -> . NUMBER
    (49) expression -> . IDENTIFIER
    (50) expression -> . TRUE
    (51) expression -> . FALSE

    MINUS           shift and go to state 36
    NOT             shift and go to state 37
    LPAREN          shift and go to state 38
    NUMBER          shift and go to state 39
    IDENTIFIER      shift and go to state 40
    TRUE            shift and go to state 41
    FALSE           shift and go to state 42

    expression                     shift and go to state 51

state 35

    (24) if_statement -> IF expression . THEN statements else_part FI
    (32) expression -> expression . PLUS expression
    (33) expression -> expression . MINUS expression
    (34) expression -> expression . TIMES expression
    (35) expression -> expression . DIVIDE expression
    (36) expression -> expression . POWER expression
    (37) expression -> expression . EQ expression
